logs/run-node-text-imports-20260713-0408/commands.log
## 04:09 node -v (baseline)
v22.17.0
## 04:09 nvm ls-remote (node 26 line)
        v26.0.0
        v26.1.0
        v26.2.0
        v26.3.0
        v26.3.1
        v26.4.0
        v26.5.0
## 04:09 nvm install 26
Downloading and installing node v26.5.0...
Downloading https://nodejs.org/dist/v26.5.0/node-v26.5.0-darwin-arm64.tar.xz...
#                                                                          2.5%##########################                                                36.4%###################################################                       70.8%######################################################################## 100.0%
Computing checksum with sha256sum
Checksums matched!
Now using node v26.5.0 (npm v11.17.0)
## after install: node -v
v26.5.0
elapsed: 12s

==================================================================
= 全ケースの生ログ集約（2026-07-13 04:11） node v26.5.0    =
==================================================================

----- logs/no-flag.txt -----
node:internal/modules/esm/get_format:243
  throw new ERR_UNKNOWN_FILE_EXTENSION(ext, filepath);
        ^

TypeError [ERR_UNKNOWN_FILE_EXTENSION]: Unknown file extension ".txt" for /Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/message.txt
    at Object.getFileProtocolModuleFormat [as file:] (node:internal/modules/esm/get_format:243:9)
    at defaultGetFormat (node:internal/modules/esm/get_format:283:36)
    at defaultLoadSync (node:internal/modules/esm/load:161:16)
    at #loadAndMaybeBlockOnLoaderThread (node:internal/modules/esm/loader:809:12)
    at #loadSync (node:internal/modules/esm/loader:841:53)
    at ModuleLoader.load (node:internal/modules/esm/loader:790:26)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:501:31)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:567:36)
    at afterResolve (node:internal/modules/esm/loader:614:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:620:12) {
  code: 'ERR_UNKNOWN_FILE_EXTENSION'
}

Node.js v26.5.0
----- (end no-flag) -----

----- logs/with-flag.txt -----
(node:89451) ExperimentalWarning: Text import is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
=== text import ===
こんにちは、text imports！
これは複数行のテキストファイルです。
3行目には末尾スペースがあります
last line without trailing newline handling test
----- (end with-flag) -----

----- logs/no-attr.txt -----
node:internal/modules/esm/get_format:243
  throw new ERR_UNKNOWN_FILE_EXTENSION(ext, filepath);
        ^

TypeError [ERR_UNKNOWN_FILE_EXTENSION]: Unknown file extension ".txt" for /Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/message.txt
    at Object.getFileProtocolModuleFormat [as file:] (node:internal/modules/esm/get_format:243:9)
    at defaultGetFormat (node:internal/modules/esm/get_format:283:36)
    at defaultLoadSync (node:internal/modules/esm/load:161:16)
    at #loadAndMaybeBlockOnLoaderThread (node:internal/modules/esm/loader:809:12)
    at #loadSync (node:internal/modules/esm/loader:841:53)
    at ModuleLoader.load (node:internal/modules/esm/loader:790:26)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:501:31)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:567:36)
    at afterResolve (node:internal/modules/esm/loader:614:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:620:12) {
  code: 'ERR_UNKNOWN_FILE_EXTENSION'
}

Node.js v26.5.0
----- (end no-attr) -----

----- logs/wrong-type.txt -----
node:internal/modules/esm/get_format:243
  throw new ERR_UNKNOWN_FILE_EXTENSION(ext, filepath);
        ^

TypeError [ERR_UNKNOWN_FILE_EXTENSION]: Unknown file extension ".txt" for /Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/message.txt
    at Object.getFileProtocolModuleFormat [as file:] (node:internal/modules/esm/get_format:243:9)
    at defaultGetFormat (node:internal/modules/esm/get_format:283:36)
    at defaultLoadSync (node:internal/modules/esm/load:161:16)
    at #loadAndMaybeBlockOnLoaderThread (node:internal/modules/esm/loader:809:12)
    at #loadSync (node:internal/modules/esm/loader:841:53)
    at ModuleLoader.load (node:internal/modules/esm/loader:790:26)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:501:31)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:567:36)
    at afterResolve (node:internal/modules/esm/loader:614:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:620:12) {
  code: 'ERR_UNKNOWN_FILE_EXTENSION'
}

Node.js v26.5.0
----- (end wrong-type) -----

----- logs/missing.txt -----
node:internal/modules/esm/resolve:272
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/does-not-exist.txt' imported from /Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/missing.mjs
    at finalizeResolution (node:internal/modules/esm/resolve:272:11)
    at moduleResolve (node:internal/modules/esm/resolve:879:10)
    at defaultResolve (node:internal/modules/esm/resolve:1006:11)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:708:20)
    at #resolveAndMaybeBlockOnLoaderThread (node:internal/modules/esm/loader:728:38)
    at ModuleLoader.resolveSync (node:internal/modules/esm/loader:766:56)
    at #resolve (node:internal/modules/esm/loader:690:17)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:610:35)
    at ModuleJob.syncLink (node:internal/modules/esm/module_job:277:33)
    at ModuleJob.link (node:internal/modules/esm/module_job:389:17) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/does-not-exist.txt'
}

Node.js v26.5.0
----- (end missing) -----

----- logs/named.txt -----
(node:90050) ExperimentalWarning: Text import is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
file:///Users/katayamaryuunosuke/workspace/024_zenn/logs/run-node-text-imports-20260713-0408/workspace/named.mjs:2
import { foo } from './message.txt' with { type: 'text' };
         ^^^
SyntaxError: The requested module './message.txt' does not provide an export named 'foo'
    at #asyncInstantiate (node:internal/modules/esm/module_job:463:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:561:5)
    at async node:internal/modules/esm/loader:650:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v26.5.0
----- (end named) -----

----- logs/inspect.txt -----
(node:90060) ExperimentalWarning: Text import is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
typeof msg     : string
msg.length     : 104
lines (split n): 4
has newline    : true
--- JSON.stringify (改行やスペースを可視化) ---
"こんにちは、text imports！\nこれは複数行のテキストファイルです。\n3行目には末尾スペースがあります\nlast line without trailing newline handling test"
----- (end inspect) -----

----- logs/fs-version.txt -----
=== fs.readFileSync ===
typeof msg : string
msg.length : 104
こんにちは、text imports！
これは複数行のテキストファイルです。
3行目には末尾スペースがあります
last line without trailing newline handling test
----- (end fs-version) -----

----- logs/json-version.txt -----
=== json import ===
typeof data : object
data.greeting: こんにちは
data.count   : 3
data.tags[0] : node
{
  greeting: 'こんにちは',
  count: 3,
  tags: [ 'node', 'esm', 'import-attributes' ]
}
----- (end json-version) -----
